tests/snapshots/yaml_suite_snapshots__yaml_suite_7FWL_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "!!str foo: !bar baz\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2784370"
  json: "{\n  \"foo\": \"baz\"\n}\n"
  name: Spec Example 6.24. Verbatim Tags
  tags: mapping spec tag unknown-tag
  tree: "+STR\n +DOC\n  +MAP\n   =VAL <tag:yaml.org,2002:str> :foo\n   =VAL <!bar> :baz\n  -MAP\n -DOC\n-STR\n"
  yaml: "!<tag:yaml.org,2002:str> foo :\n  !<!bar> baz\n"
