tests/snapshots/yaml_suite_snapshots__yaml_suite_7LBH_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Multiline double quoted implicit keys
  from: "@perlpunk"
  tags: error double
  fail: true
  yaml: "\"a\\nb\": 1\n\"c\n d\": 1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL \"a\\nb\n   =VAL :1\n"
