tests/snapshots/yaml_suite_snapshots__yaml_suite_7LBH_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Multiline double quoted implicit keys
  tags: error double
  tree: "+STR\n +DOC\n  +MAP\n   =VAL \"a\\nb\n   =VAL :1\n"
  yaml: "\"a\\nb\": 1\n\"c\n d\": 1\n"
