tests/snapshots/yaml_suite_snapshots__yaml_suite_7MNF_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Missing colon
  from: "@perlpunk"
  tags: error mapping
  fail: true
  yaml: "top1:\n  key1: val1\ntop2\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :top1\n   +MAP\n    =VAL :key1\n    =VAL :val1\n   -MAP\n"
