tests/snapshots/yaml_suite_snapshots__yaml_suite_7T8X_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 8.10. Folded Lines - 8.13. Final Empty Lines
  from: "http://www.yaml.org/spec/1.2/spec.html#id2796543"
  tags: spec folded scalar comment 1.3-err
  yaml: ">\n\n folded\n line\n\n next\n line\n   * bullet\n\n   * list\n   * lines\n\n last\n line\n\n# Comment\n"
  tree: "+STR\n +DOC\n  =VAL >\\nfolded line\\nnext line\\n  * bullet\\n\\n  * list\\n  * lines\\n\\nlast line\\n\n -DOC\n-STR\n"
  json: "\"\\nfolded line\\nnext line\\n  * bullet\\n\\n  * list\\n  * lines\\n\\nlast line\\n\"\n"
  dump: ">\n\n  folded line\n\n  next line\n    * bullet\n\n    * list\n    * lines\n\n  last line\n"
